fix: maintain flip quality on ios
added -webkit to css properties
only thing missing is module.css updates

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -207,6 +207,7 @@ body {
 }
 .recipe-container.flip .recipe-flipper {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 .recipe-flipper {
@@ -223,11 +224,11 @@ body {
     left: 0;
     position: absolute;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 .recipeDiv {
     background-size: cover;
     background-position: center;
-    transform: rotateY(0deg);
     z-index: 2;
 }
 .recipeNameDiv {
@@ -241,6 +242,7 @@ body {
 .recipe-card {
     background-color: white;
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 .recipe-card-ingredients {
     height: 320px;
